--- a/d3jsBarGraf.html
+++ b/d3jsBarGraf.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<h1>Bar chart</h1>
 <meta charset="utf-8">
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
