--- a/d3jsBarGraf.html
+++ b/d3jsBarGraf.html
@@ -2,7 +2,10 @@
 <h1>Bar chart edit on git site</h1>
 <meta charset="utf-8">
 <svg width="960" height="500"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src ="d3/d3.min.js"></script>
+
+<!-- <script src="https://d3js.org/d3.v4.min.js"></script>-->
+
 <script>
 
 var data = [
